# fish-django-completions

./: .gitignore  .travis.yml  LICENSE  README.md  __fish_complete_django.fish  django.fish  fish_django_completions.py  generate.py  setup.cfg  setup.py
output/: generate_output.fish
output/django2.2/: __fish_complete_django.fish
output/django3.1/: __fish_complete_django.fish
src/fish_completions/: manage.py.fish
src/fish_completions/management/commands/: fish_completions.py
