[metadata]
name = fish-django-completions
version = 0.0.1
description = A management command to generate Fish Shell completions for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apie/fish-django-completions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
